hw18-docker-k8s/k8s/gateway-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-gateway-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-gateway-server
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: k8s-gateway-server
    spec:
      containers:
        - image: docker.io/library/k8s-gateway-server-image:0.0.20
          name: k8s-gateway-server
          ports:
            - containerPort: 8080
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 10
          imagePullPolicy: Never
      #imagePullSecrets:
        #- name: regcred
