hw18-docker-k8s/k8s/gateway-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-gateway-server
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: k8s-gateway-server
  type: ClusterIP
